@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 [B]Version 1.1.211[/B]
 - americass - removed (site defunct) - cherry-picked from upstream
 - Fix video playback for FlareSolverr scraped sites (e.g. luxuretv) - cherry-picked from upstream
@@ -5,6 +6,7 @@
 - xxxtube - new site - cherry-picked from upstream
 - sxyprn - fix search
 - allclassic - fixes #1742
+- kissjav - fix thumbnails, playback fixes #1743
 
 [B]Version 1.1.204[/B]
 - Testing Infrastructure: Expanded test suite from 449 to 622 tests (38% increase)
@@ -104,3 +106,8 @@
 - youporn, youjizz, tube8, redtube: fix playback by extracting direct sources and setting referer
 - youporn: remove duplicate listings
 - motherless: load Recent by default, de-dupe listings, and play direct sources
+=======
+[B]Version 1.1.169[/B]
+- kissjav - fix thumbnails, playback
+
+>>>>>>> a4e50af (kissjav - fix thumbnails, playback fixes #1743)
